SAG problem fixed

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -205,31 +205,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data_size\n",
+      "distro\n",
       "False\n",
-      "[['gau_1' '100' 'False']\n",
-      " ['gau_1' '1000' 'False']\n",
-      " ['gau_1' '10000' 'False']]\n",
+      "[['mix' '1000' 'True']\n",
+      " ['gau_1' '1000' 'True']\n",
+      " ['gau_2' '1000' 'True']\n",
+      " ['exp' '1000' 'True']]\n",
       "get_q_ests using method_name SAG\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "Experiment_results/SAG/distro/mix_q_true.txt\n",
+      "Experiment_results/SAG/distro/mix_q_batches.txt\n",
+      "Experiment_results/SAG/distro/mix_q_est_res.txt\n",
+      "Experiment_results/SAG/distro/mix_q_est_proc.txt\n",
+      "Experiment_results/SAG/distro/mix_E.txt\n",
+      "get_q_ests using method_name SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "Experiment_results/SAG/distro/gau_1_q_true.txt\n",
+      "Experiment_results/SAG/distro/gau_1_q_batches.txt\n",
+      "Experiment_results/SAG/distro/gau_1_q_est_res.txt\n",
+      "Experiment_results/SAG/distro/gau_1_q_est_proc.txt\n",
+      "Experiment_results/SAG/distro/gau_1_E.txt\n",
+      "get_q_ests using method_name SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "Experiment_results/SAG/distro/gau_2_q_true.txt\n",
+      "Experiment_results/SAG/distro/gau_2_q_batches.txt\n",
+      "Experiment_results/SAG/distro/gau_2_q_est_res.txt\n",
+      "Experiment_results/SAG/distro/gau_2_q_est_proc.txt\n",
+      "Experiment_results/SAG/distro/gau_2_E.txt\n",
+      "get_q_ests using method_name SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "Experiment_results/SAG/distro/exp_q_true.txt\n",
+      "Experiment_results/SAG/distro/exp_q_batches.txt\n",
+      "Experiment_results/SAG/distro/exp_q_est_res.txt\n",
+      "Experiment_results/SAG/distro/exp_q_est_proc.txt\n",
+      "Experiment_results/SAG/distro/exp_E.txt\n",
+      "data_size\n",
+      "False\n",
+      "[['gau_1' '100' 'True']\n",
+      " ['gau_1' '1000' 'True']\n",
+      " ['gau_1' '10000' 'True']]\n",
+      "get_q_ests using method_name SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(100, 5)\n",
       "Experiment_results/SAG/data_size/100_q_true.txt\n",
       "Experiment_results/SAG/data_size/100_q_batches.txt\n",
       "Experiment_results/SAG/data_size/100_q_est_res.txt\n",
@@ -237,17 +435,41 @@
       "Experiment_results/SAG/data_size/100_E.txt\n",
       "get_q_ests using method_name SAG\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
       "Experiment_results/SAG/data_size/1000_q_true.txt\n",
       "Experiment_results/SAG/data_size/1000_q_batches.txt\n",
       "Experiment_results/SAG/data_size/1000_q_est_res.txt\n",
@@ -255,22 +477,128 @@
       "Experiment_results/SAG/data_size/1000_E.txt\n",
       "get_q_ests using method_name SAG\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(10000, 5)\n",
       "Experiment_results/SAG/data_size/10000_q_true.txt\n",
       "Experiment_results/SAG/data_size/10000_q_batches.txt\n",
       "Experiment_results/SAG/data_size/10000_q_est_res.txt\n",
       "Experiment_results/SAG/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/SAG/data_size/10000_E.txt\n"
+      "Experiment_results/SAG/data_size/10000_E.txt\n",
+      "data_sequence\n",
+      "True\n",
+      "[['gau_1' '1000' 'True']\n",
+      " ['gau_1' '1000' 'True']]\n",
+      "get_q_ests using method_name SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_true.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_batches.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_est_res.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_est_proc.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_E.txt\n",
+      "get_q_ests using method_name SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99] SAG\n",
+      "--- SAG True\n",
+      "(1000, 5)\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_true.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_batches.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_est_res.txt\n",
+      "Experiment_results/SAG/data_sequence/shuffle_q_est_proc.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/SAG/data_sequence/shuffle_E.txt\n"
      ]
     }
    ],
@@ -279,17 +607,17 @@
     "initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n",
     "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = compare_lst)\n",
     "args_dict_SAG = {\n",
-    "    'distro': (distros, [1000], [False], True),\n",
-    "    'data_size': (['gau_1'], [100, 1000, 10000], [False], True),\n",
-    "    'data_sequence':(['gau_1', 'gau_1'], [1000], [False], False, True),\n",
+    "    'distro': (distros, [1000], [True], True),\n",
+    "    'data_size': (['gau_1'], [100, 1000, 10000], [True], True),\n",
+    "    'data_sequence':(['gau_1', 'gau_1'], [1000], [True], False, True),\n",
     "\n",
     "}\n",
-    "all_method_comparisons(['data_size'], args_dict_SAG, main_folder)"
+    "all_method_comparisons(compare_lst, args_dict_SAG, main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,13 +655,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/SAG/distro/gau_1_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/distro/mix_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/distro/gau_2_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/distro/exp_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/data_size/100_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/data_size/10000_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/data_size/1000_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "Experiment_results/SAG/data_sequence/shuffle_\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n",
+      "[0.1, 0.3, 0.5, 0.9, 0.99]\n",
+      "q label is  SAG\n"
+     ]
+    }
+   ],
    "source": [
-    "# from Plot import plot_charts\n",
+    "from Plot import plot_charts\n",
     "\n",
-    "# plot_charts(\"Experiment_results/SAG/\")"
+    "plot_charts(\"Experiment_results/SAG/\")"
    ]
   },
   {
