--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -29,7 +29,7 @@
 
 \documentclass[
 		twoside,openright,titlepage,numbers=noenddot,headinclude,%1headlines,
-	 	footinclude=true,cleardoublepage=empty,
+	 	footinclude=false,cleardoublepage=empty,
 		dottedtoc, % Make page numbers in the table of contents flushed right with dots leading to them
 		BCOR=5mm,paper=a4,fontsize=11pt, % Binding correction, paper type and font size
 		ngerman,american, % Languages, change this to your language(s)
@@ -62,15 +62,15 @@
 %	PRE-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-% \include{FrontBackMatter/Titlepage} % Main title page
+\include{FrontBackMatter/Titlepage} % Main title page
 
-% \include{FrontBackMatter/Titleback} % Back of the title page
+\include{FrontBackMatter/Titleback} % Back of the title page
 
 % \cleardoublepage\include{FrontBackMatter/Dedication} % Dedication page
 
 %\cleardoublepage\include{FrontBackMatter/Foreword} % Uncomment and create a Foreword.tex to include a foreword
 
-% \cleardoublepage\include{FrontBackMatter/Abstract} % Abstract page
+\cleardoublepage\include{FrontBackMatter/Abstract} % Abstract page
 
 % \cleardoublepage\include{FrontBackMatter/Publications} % Publications from the thesis page
 
@@ -78,14 +78,14 @@
 
 \pagestyle{scrheadings} % Show chapter titles as headings
 
-% \cleardoublepage\include{FrontBackMatter/Contents} % Contents, list of figures/tables/listings and acronyms
+\cleardoublepage\include{FrontBackMatter/Contents} % Contents, list of figures/tables/listings and acronyms
 
 % \cleardoublepage
 
 \pagenumbering{arabic} % Arabic page numbering for thesis content (1, 2, 3, etc)
 %\setcounter{page}{90} % Uncomment to manually start the page counter at an arbitrary value (for example if you wish to count the pre-content pages in the page count)
 
-% \cleardoublepage % Avoids problems with pdfbookmark
+\cleardoublepage % Avoids problems with pdfbookmark
 
 
 
@@ -96,13 +96,13 @@
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
-% \include{Chapters/Introduction}
-% \include{Chapters/literature_review} % Chapter 2
-% \include{Chapters/algorithm_equivalence}
+\include{Chapters/Introduction}
+\include{Chapters/literature_review} % Chapter 2
+\include{Chapters/algorithm_equivalence}
 \include{Chapters/sgd_experiment}
-% \include{Chapters/SAG}
-% \include{Chapters/smooth_func}
-% \include{Chapters/Multi_quant}
+\include{Chapters/Stepsize_adaptation}
+\include{Chapters/Multi_quant}
+\include{Chapters/Conclusion}
 
 
 \cleardoublepage % Empty page before the start of the next part
@@ -127,7 +127,7 @@
 %	POST-CONTENT THESIS PAGES
 %----------------------------------------------------------------------------------------
 
-\cleardoublepage\include{FrontBackMatter/Bibliography} % Bibliography
+\include{FrontBackMatter/Bibliography} % Bibliography
 
 % \cleardoublepage\include{FrontBackMatter/Declaration} % Declaration
 
