Still needs to be modified

--- a/QuantEst/code/Experiment_final.ipynb
+++ b/QuantEst/code/Experiment_final.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New file"
+    "## Run all experiments"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
+    "# sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
     "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]"
    ]
   },
@@ -65,13 +65,6 @@
     "    upper = est - batches\n",
     "    bottom = true - batches\n",
     "    return (upper/bottom)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Main functions "
    ]
   },
   {
@@ -127,17 +120,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_more_plot(SHUFFLE):\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -157,6 +139,13 @@
     "        \n",
     "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, MULTI_GENERATION, SHUFFLE, tau_lst, method_name=root_folder)\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Settings"
    ]
   },
   {
@@ -201,6 +190,13 @@
     "#                        sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = ['data_size'])\n",
     "\n",
     "# all_method_comparisons(['step_size'], args_dict, main_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run this one to generate all experimental results"
    ]
   },
   {
@@ -359,19 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!---\n",
-    "### Always have $q_k = x$ for each x in the data stream\n",
-    "\n",
-    "When $x - q_k > 0$, we have $l(q_k) = \\tau(x-q_k)$:\n",
-    "\\begin{align}\n",
-    "q_{k+1} & = q_k - \\frac{l(q_k)}{l'(q_k)} \\\\\n",
-    "        & = q_k - \\frac{\\tau(x-q_k)}{-\\tau} \\\\\n",
-    "        & = q_k - (- x + q_k) \\\\\n",
-    "        & = x\n",
-    "\\end{align}\n",
-    "\n",
-    "Same happens when $x - q_k < 0$\n",
-    "-->"
+    "### Run this to generate all plots"
    ]
   },
   {
@@ -459,24 +443,8 @@
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/Adaptive_stepsize/\")"
+    "plot_charts(\"Experiment_results/\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
