moved code from Multi.ipynb to this one

--- a/QuantEst/code/Presentation plot.ipynb
+++ b/QuantEst/code/Presentation plot.ipynb
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,8 @@
      "output_type": "stream",
      "text": [
       "Step size 5 , Mean crossing 2830.56 , Std crossing 113.40972797780623\n",
-      "Step size 1 , Mean crossing 664.17 , Std crossing 165.5919717256848\n"
+      "Step size 1 , Mean crossing 664.17 , Std crossing 165.5919717256848\n",
+      "Step size 0.45 , Mean crossing 104.43 , Std crossing 80.93259602904135\n"
      ]
     }
    ],
