--- a/QuantEst/code/Experiment_final.ipynb
+++ b/QuantEst/code/Experiment_final.ipynb
@@ -73,6 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The main function that takes a setting \n",
+    "\n",
     "def quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, \n",
     "                         MULTI_GENERATION=False, SHUFFLE=False, tau_lst=[0.1, 0.3, 0.5, 0.9, 0.99], \n",
     "                        method_name='SGD',\n",
@@ -113,7 +115,8 @@
     "            'q_est_proc': q_est_proc,\n",
     "            'E': E\n",
     "        }\n",
-    "        # generate charts and tables?\n",
+    "        \n",
+    "        # write the quantiles estimation results into files\n",
     "        file_name = get_file_name(changed_setting, distro, datasize, stepsize, SHUFFLE)\n",
     "        save_data(folder_name, file_name, tau_lst, data_dict, method_name)"
    ]
@@ -135,7 +138,6 @@
     "        MULTI_GENERATION = args[3]\n",
     "        SHUFFLE = False if len(args)<5 else args[4]\n",
     "        tau_lst = tau_vals\n",
-    "        print (SHUFFLE)\n",
     "        \n",
     "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, MULTI_GENERATION, SHUFFLE, tau_lst, method_name=root_folder)\n",
     "            "
@@ -154,6 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Default settings, please don't change\n",
+    "\n",
     "distros = ['mix', 'gau_1', 'gau_2', 'exp']\n",
     "stepsizes = ['const', '2_div_sqrt_k', '0.002_div_sqrt_k']\n",
     "\n",
@@ -173,13 +177,14 @@
     "compare_lst = ['distro', 'data_size', 'data_sequence']\n",
     "\n",
     "    \n",
-    "args_dict = {\n",
+    "args_dict_SGD = {\n",
     "    'distro': (distros, [1000], ['const'], True),\n",
     "    'data_size': (['gau_1'], [100, 1000, 100000], ['const'], True),\n",
     "    'step_size': (['gau_1'], [1000], stepsizes, True),\n",
     "    'data_sequence':(['gau_1', 'gau_1'], [1000], ['const'], False, True),\n",
     "}\n",
     "\n",
+    "# shiftQ needs positive inputs\n",
     "args_dict_shift_Q = {\n",
     "    'distro': (['positive mix', 'positive gau_1', 'positive gau_2', 'positive exp'], [1000], ['const'], True),\n",
     "    'data_size': (['positive gau_1'], [100, 1000, 10000], ['const'], True),\n",
