update group one result

--- a/Q_BAI/AISTATS2021_code/notebooks/Group_Two_Simulation.ipynb
+++ b/Q_BAI/AISTATS2021_code/notebooks/Group_Two_Simulation.ipynb
@@ -61,31 +61,40 @@
     "# environment\n",
     "\n",
     "environments = [\n",
-    "    {Mixture_AbsGau: [[0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1],  \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1],\n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1], \n",
-    "                      [0, 1.5, 0,1, 1],\n",
+    "    {Mixture_AbsGau: [[0, 2, 0,1, 1], [3.5, 2, 0, 1, 1], \n",
+    "                    #   [3.5, 2, 0, 1, 1], [3.5, 2, 0, 1, 1], \n",
+    "                    #   [3.5, 2, 0, 1, 1], [3.5, 2, 0, 1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1], \n",
+    "                      [0, 2, 0,1, 1],  \n",
+    "                      [0, 2, 0,1, 1],  \n",
     "                     ],\n",
-    "     Exp: [[1/4], [1/4]\n",
-    "          ]\n",
+    "     Exp: [[1/4], [1/4], [1/4], [1/4]]\n",
     "    } # mu1, sigma1, mu2, sigma2, p\n",
     "    \n",
     "]\n",
     "\n",
-    "\n",
     "tau = 0.8 # quantile level\n",
-    "rewards_env, quantiles, Ls, means, samples = setup_env(environments, tau)"
+    "rewards_env, true_ss_dict, samples = setup_env(environments, ['quantile_0.5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_ss_dict"
    ]
   },
   {
@@ -96,31 +105,20 @@
    "source": [
     "# run experiments\n",
     "\n",
-    "def run_exper(rewards_env, summary_stats, policy, epsilon, m, budget_or_confi, num_exper, hyperpara_list, \n",
-    "              fixed_samples_list = None, est_H_flag = False, est_L_flag = None, fixed_L = None , tau = None):\n",
+    "def run_exper(rewards_env, summary_stats, policy, epsilon, m, budget, num_exper, \n",
+    "              fixed_samples_list = None):\n",
     "    for key in rewards_env.keys():\n",
-    "        for hyperpara in hyperpara_list:\n",
-    "            name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
-    "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
-    "            subname = policy_name + str(hyperpara) \n",
-    "            if est_H_flag:\n",
-    "                subname = 'Adp_' + subname\n",
-    "            #print(name + subname)\n",
-    "            p = IntProgress(max = num_exper)\n",
-    "            p.description = 'Running'\n",
-    "            display(p)\n",
-    "            results[name][subname] = []\n",
-    "            est_Hs[name][subname] = []\n",
-    "            if est_H_flag:\n",
-    "                result, est_H_list = simulate(rewards_env[key],summary_stats[key], policy, \n",
-    "                        epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list,\n",
-    "                        est_H_flag, est_L_flag, fixed_L, tau)\n",
-    "                est_Hs[name][subname].append(est_H_list)\n",
-    "            else:\n",
-    "                result = simulate(rewards_env[key],summary_stats[key], policy, \n",
-    "                        epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list,\n",
-    "                        est_H_flag, est_L_flag, fixed_L, tau)\n",
-    "            results[name][subname].append(result)"
+    "        name = key + '_' + str(num_exper)\n",
+    "        policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
+    "        subname = policy_name  + str(budget) \n",
+    "        p = IntProgress(max = num_exper)\n",
+    "        p.description = 'Running'\n",
+    "        display(p)\n",
+    "        results[name][subname] = []\n",
+    "\n",
+    "        result = simulate(rewards_env[key],summary_stats[key], policy, \n",
+    "                epsilon, m, budget, num_exper, p, fixed_samples_list)\n",
+    "        results[name][subname].append(result)"
    ]
   },
   {
@@ -161,22 +159,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperpara_list = [[200,1]]\n",
     "\n",
-    "run_exper(rewards_env, quantiles, Q_UGapEb, epsilon, m, budget, num_exper, hyperpara_list, \n",
-    "            est_H_flag = False, est_L_flag = est_L_flag, tau = tau)\n",
-    "\n",
-    "run_exper(rewards_env, quantiles, Q_UGapEb, epsilon, m, budget, num_exper, hyperpara_list, \n",
-    "            est_H_flag = True, est_L_flag = est_L_flag, tau = tau)\n",
     "\n",
     "run_exper(rewards_env, quantiles, Q_SAR_Simplified, epsilon, m, budget, num_exper, [[1]], tau = tau)\n",
     "\n",
     "# baseline algorithms\n",
-    "\n",
-    "run_exper(rewards_env, quantiles, UGapEb, epsilon, m, budget, num_exper, hyperpara_list, est_H_flag = False)\n",
-    "\n",
-    "\n",
-    "run_exper(rewards_env, quantiles, UGapEb, epsilon, m, budget, num_exper, hyperpara_list, est_H_flag = True)\n",
     "\n",
     "run_exper(rewards_env, quantiles, SAR_Simplified, epsilon, m, budget, num_exper, [[1]])"
    ]
@@ -201,14 +188,14 @@
    ],
    "source": [
     "# save results\n",
-    "'''\n",
-    "with open('../saved_results/Group_Two_Fixed_Budget.pickle', 'wb') as handle:\n",
+    "\n",
+    "with open('../Group_Two_Fixed_Budget.pickle', 'wb') as handle:\n",
     "     pickle.dump(results, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "with open('../saved_results/Group_Two_Fixed_Budget.pickle', 'rb') as handle:\n",
-    "     results = pickle.load(handle)\n",
-    "'''\n",
-    "        \n",
-    "plot_eva(results, 'pe', paper_flag = True, with_para = False, title = 'Group_Two_Fixed_Budget', log_scale = False, save_flag = True)"
+    "\n",
+    "with open('../Group_Two_Fixed_Budget.pickle', 'rb') as handle:\n",
+    "    results = pickle.load(handle)\n",
+    "\n",
+    "plot_eva_budget(results, 'pe', paper_flag = True, with_para = True, title = 'Group_Two_Fixed_Budget', log_scale = False)"
    ]
   },
   {
