submitted code for AISTATS2021.

--- a/Q_BAI/AISTATS2021_code/supplementary_material_AISTATS2021/notebooks/Group_One_Simulation.ipynb
+++ b/Q_BAI/AISTATS2021_code/supplementary_material_AISTATS2021/notebooks/Group_One_Simulation.ipynb
@@ -16,7 +16,7 @@
     "We compare our algorithms with the quantile-based baseline algorithms:\n",
     "- Quantile uniform sampling (Q-Uniform), where each arm is sampled uniformly and we select the arm with the maximum 0.5-quantile;\n",
     "- Quantile Batch Elimination (Q-BE) proposed in \\citet{tran-thanh_functional_2014} %, where we choose to drop one arm for each phase.\n",
-    "- Quantile Successive Rejects (Q-SR). % shown in Appendix \\ref{sec: experiment details}."
+    "- Quantile Successive Rejects (Q-SR). "
    ]
   },
   {
