--- a/Q_BAI/AISTATS2021_code/supplementary_material_AISTATS2021/notebooks/Group_Two_Simulation.ipynb
+++ b/Q_BAI/AISTATS2021_code/supplementary_material_AISTATS2021/notebooks/Group_Two_Simulation.ipynb
@@ -12,7 +12,7 @@
     "The goal is to identify $m$ arms with maximum $0.8$-quantile.\n",
     "Both mean and 0.8-quantile provide the same order of arms, while\n",
     "0.8-quantile can provide a larger gap compared with the mean.\n",
-    "According to Theorem \\ref{theo: QSAR}, the environment with larger minimum suboptimality gap has smaller probability complexity\n",
+    "The environment with larger minimum suboptimality gap has smaller probability complexity\n",
     "and thus smaller upper bound of probability of error (it holds for the mean-based algorithm \\citep{bubeck2013multiple} as well).\n",
     "We compare our algorithms with the baseline algorithms:\n",
     "- mean-based Successive Accepts and Rejects (SAR) \\citep{bubeck2013multiple}.\n",
